overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ img {
 .content {
   text-align: center;
   color: white;
-  overflow-y: scroll;
   z-index: 100;
 }
 
@@ -462,6 +461,10 @@ h3 {
 
 .accordion-item .accordion-button:not(.collapsed) {
   font-weight: bold;
+}
+
+.about {
+  overflow-y: scroll;
 }
 
 .cv {
