--- a/sass/partials/_about.scss
+++ b/sass/partials/_about.scss
@@ -1,3 +1,7 @@
+.about {
+    overflow-y: scroll;
+}
+
 .cv {
     font-size: 1.2rem;
     margin: 1rem;
