--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -13,7 +13,6 @@ img {
 .content {
     text-align: center;
     color: white;
-    overflow-y: scroll;
     z-index: 100;
 }
 
